--- a/DOM/two.html
+++ b/DOM/two.html
@@ -9,7 +9,14 @@
     <div class="one">my first dom model</div>
     <div class="two">to create a new elemnt</div>
     <script>
-        document.createAttribute()
+        const x = document.createElement('div');
+        x.style.color = "blue"
+        //x.innerText = "my html element"
+        x.appendChild(document.createTextNode('my html element'))
+        document.body.appendChild(x)
+
+        const y = document.createAttribute('h1').innerText = "Document Object Model";
+        console.log(y)
     </script>
 </body>
 </html>
