--- a/DOM/three.html
+++ b/DOM/three.html
@@ -12,7 +12,8 @@
         <li>JAVASCRIPT</li>
     </ul>
     <script>
-        c
+        const x= document.createElement('li')
+        document.querySelector('ul').appendChild(
     </script>
 </body>
 </html>
