--- a/DOM/three.html
+++ b/DOM/three.html
@@ -13,7 +13,7 @@
     </ul>
     <script>
         const x= document.createElement('li')
-        document.querySelector('ul').appendChild(
+        document.querySelector('ul').appendChild(x.appendChild(document.createTextNode("typescript")
     </script>
 </body>
 </html>
