--- a/adv_js/APIreq_V8.html
+++ b/adv_js/APIreq_V8.html
@@ -13,7 +13,7 @@
 4	DONE	The operation is complete.
 </body>
 <script>
-    const requestUrl = 'https://api.github.com/users/hiteshchoudhary'
+    const requestUrl = 'https://api.github.com/users/prime-jd '
     const xhr = new XMLHttpRequest();
     xhr.open('GET', requestUrl)
     xhr.onreadystatechange = function(){
