--- a/10_adv_js/APIreq_V8.html
+++ b/10_adv_js/APIreq_V8.html
@@ -14,8 +14,8 @@
 </body>
 <script>
     const requestUrl = 'https://api.github.com/users/prime-jd '
-    const xhr = new XMLHttpRequest();
-    xhr.open('GET', requestUrl)
+    const xhr = new XMLHttpRequest();    //all the step functions or attributes stored here
+    xhr.open('GET', requestUrl)          
     xhr.onreadystatechange = function(){
         console.log(xhr.readyState);
         if (xhr.readyState === 4) {
